Enhance README with Burp Suite Pro setup guide
Added detailed setup instructions for Burp Suite Pro on Linux ARM, including installation commands and images.